Fixed Header Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -341,13 +341,13 @@ img {
 
     h2,
     h2-typed {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
         font-weight: 300;
         margin-bottom: 2rem;
     }
 
     .typed-cursor {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
     }
 
     h3 {
