--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -140,13 +140,13 @@ div.header__profile img {
     white-space: nowrap;
     width: 100vw;
     height: 160vh;
-    top: -10vh;
+    top: -12vh;
     left: -50%;
     pointer-events: none;
 }
 
 .up-ticker {
-    letter-spacing: 2;
+    letter-spacing: 1;
     opacity: 0.8;
     font-size: 25px;
     font-weight: 300;
@@ -256,7 +256,7 @@ div.header__profile img {
     }
 
     .up-ticker-wrap {
-        top: -4vh;
+        top: -6vh;
     }
 
     .down-ticker-wrap {
@@ -266,12 +266,16 @@ div.header__profile img {
 
 /* MEDIA QUERIES (iPad Pro) */
 @media screen and (max-width: 1024px) {
+    .header__socials {
+        display: none;
+    }
+
     .streak {
         top: 180px;
     }
 
     .up-ticker-wrap {
-        top: -75%;
+        top: -68%;
         animation: up-tick 60s linear infinite;
     }
 
@@ -282,6 +286,10 @@ div.header__profile img {
 
 /* MEDIA QUERIES (Surface Pro 7) */
 @media screen and (max-width: 912px) {
+    .header__socials {
+        display: none;
+    }
+
     .up-ticker-wrap {
         top: -68%;
     }
@@ -294,7 +302,11 @@ div.header__profile img {
 /* MEDIA QUERIES (iPad Air) */
 @media screen and (max-width: 820px) {
     .up-ticker-wrap {
-        top: -58%;
+        top: -51%;
+    }
+
+    .header__socials {
+        display: none;
     }
 
     .down-ticker-wrap {
@@ -305,7 +317,7 @@ div.header__profile img {
 /* MEDIA QUERIES (tablets) */
 @media screen and (max-width: 600px) {
     .header__profile {
-        margin-top: 7rem;
+        margin-top: 1rem;
         margin-bottom: 1rem;
         width: 12rem;
         height: 12rem;
@@ -324,10 +336,6 @@ div.header__profile img {
     }
 
     .header__socials {
-        display: none;
-    }
-
-    .username {
         display: none;
     }
 
@@ -355,7 +363,7 @@ div.header__profile img {
     }
 
     .up-ticker-wrap {
-        top: -24%;
+        top: -23vh;
     }
 
     .down-ticker-wrap {
@@ -370,7 +378,7 @@ div.header__profile img {
     }
 
     .up-ticker-wrap {
-        top: -19%;
+        top: -22vh;
     }
 
     .down-ticker-wrap {
@@ -381,7 +389,7 @@ div.header__profile img {
 /* MEDIA QUERIES (Samsung Galaxy S20 Ultra & Pixel 7) */
 @media screen and (max-width: 412px) {
     .up-ticker-wrap {
-        top: -19%;
+        top: -22vh;
     }
 
     .down-ticker-wrap {
@@ -406,7 +414,7 @@ div.header__profile img {
 /* MEDIA QUERIES (iPhone 12 Pro) */
 @media screen and (max-width: 390px) {
     .up-ticker-wrap {
-        top: -19%;
+        top: -20vh;
     }
 
     .down-ticker-wrap {
@@ -417,7 +425,7 @@ div.header__profile img {
 /* MEDIA QUERIES (iPhone SE) */
 @media screen and (max-width: 375px) {
     .up-ticker-wrap {
-        top: -15%;
+        top: -18%;
     }
 
     .down-ticker-wrap {
@@ -432,7 +440,7 @@ div.header__profile img {
     }
 
     .up-ticker-wrap {
-        top: -8%;
+        top: -16vh;
     }
 
     .down-ticker-wrap {
@@ -447,7 +455,7 @@ div.header__profile img {
     }
 
     .up-ticker-wrap {
-        top: -16%;
+        top: -39%;
     }
 
     .down-ticker-wrap {
